--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-I'M HOGE-DRIVEN
+<html>
+<head>
+<title>I'M HOGE-DRIVEN</title>
+</head>
+<body>
+<img src='logo.jpg' style='height:500px; width:500px; position:absolute; top:50%; left:50%; margin-top:-250px;margin-left:-250px;' />
+</body>
+</html>
