--- a/index.html
+++ b/index.html
@@ -1,8 +1,25 @@
+<!DOCTYPE html>
 <html>
-<head>
-<title>I'M HOGE-DRIVEN</title>
-</head>
-<body>
-<img src='logo.jpg' style='height:500px; width:500px; position:absolute; top:50%; left:50%; margin-top:-250px;margin-left:-250px;' />
-</body>
+  <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="chrome=1,IE=9" />
+	<meta name="viewport" content="user-scalable=yes, width=600" />
+	<title>hoge</title>
+	<style>
+		body {
+			background-color: #FFFFFF;
+			margin: 0px;
+		}
+	</style>
+	
+  </head>
+  <body>
+	<div style ="margin:auto;width:600px">
+
+	<div id="hoge_hype_container" style="position:relative;overflow:hidden;width:600px;height:400px;">
+		<script type="text/javascript" charset="utf-8" src="./resources/js/hoge_hype_generated_script.js?38561"></script>
+	</div>
+
+	</div>
+  </body>
 </html>
