リンク貼ったった

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
   </head>
   <body>
 	<div style ="margin:auto;width:600px">
-
+	<a href="./log.html">
 	<div id="hoge_hype_container" style="position:relative;overflow:hidden;width:600px;height:400px;">
 		<script type="text/javascript" charset="utf-8" src="./resources/js/hoge_hype_generated_script.js?38561"></script>
 	</div>
+	</a>
 
 	</div>
   </body>
