ステーキ画像と採用ページ追加

--- a/aprilfools2013/index.html
+++ b/aprilfools2013/index.html
@@ -33,14 +33,15 @@
             <li class="works"><a href="#works"><span>主な実績</span></a></li>
             <li class="info"><a href="#info"><span>お知らせ</span></a></li>
             <li class="press"><a href="#press"><span>プレスリリース</span></a></li>
+            <li class="recruit"><a href="doit.html"><span>採用情報</span></a></li>
         </ul>
     </div>
 </div>
 <!--/nav-container -->
 <div class="top-main-copy-section">
-    <div class="copy">
-        <img alt="" src="shared/img/hoge.png" style="width: 960px; height: 320px;">
-    </div>
+	<div id="hoge_hype_container" style="position:relative;overflow:hidden;width:960px;height:320px;left:400px;">
+		<script type="text/javascript" charset="utf-8" src="../resources/js/hoge_hype_generated_script.js?38561"></script>
+	</div>
 </div>
 <div class="index-container">
     <!-- body-contaienr -->
@@ -54,7 +55,7 @@
                     <ul>
                         <li class="bg-clr1">
                             <div class="img">
-                                <img src="shared/img/noimage.jpg" width="100" height="75">
+                                <img src="shared/img/steak.jpg" width="100" height="75">
                             </div>
                             <div class="txt">
                                 <div class="date">2012/03/30</div>
@@ -152,7 +153,13 @@
                                 ステーキ駆動で「鉄板ネタ」と間違えて「鉄板」を持ち込んだ人が8人を越えました。
                             </div>
                         </li>
-                    </ul>
+                        <li>
+                            <div class="date">2012/04/31</div>
+                            <div class="title">
+                                鹿駆動における参加者から寄せられた「鹿は食っていないじゃないか」というコメントについて緊急記者会見を行いました。
+                            </div>
+                        </li>
+                  </ul>
                 </div>
 
                 <a name="press"></a>
