--- a/aprilfools2013/doit.html
+++ b/aprilfools2013/doit.html
@@ -24,7 +24,7 @@
   js.src = "//connect.facebook.net/ja_JP/all.js#xfbml=1&appId=121638264691628";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-<div class="fb-like" data-href="http://www.facebook.com/HogeDriven" data-send="true" data-width="450" data-show-faces="true"></div>
+<div class="fb-like" data-href="http://www.facebook.com/HogeDriven" data-send="false" data-width="450" data-show-faces="true"></div>
 <div class="fb-follow" data-href="http://www.facebook.com/HogeDriven" data-show-faces="true" data-width="450"></div>
 <br>
 <pre id="target"></pre>
