ほげくんをセンターに設定

--- a/aprilfools2013/index.html
+++ b/aprilfools2013/index.html
@@ -38,8 +38,8 @@
     </div>
 </div>
 <!--/nav-container -->
-<div class="top-main-copy-section">
-	<div id="hoge_hype_container" style="position:relative;overflow:hidden;width:960px;height:320px;left:400px;">
+<div class="top-main-copy-section" align="center">
+	<div id="hoge_hype_container" style="position:relative;overflow:hidden;width:600px;height:320px;">
 		<script type="text/javascript" charset="utf-8" src="../resources/js/hoge_hype_generated_script.js?38561"></script>
 	</div>
 </div>
