--- a/aprilfools2013/doit.html
+++ b/aprilfools2013/doit.html
@@ -7,7 +7,6 @@
 <meta name="Keywords"  content="" />
 <style type="text/css">
 #target{
-	
 	font-family: Consolas,Courier,monospace;
 	font-size:9px;
 	line-height:0.5;
@@ -27,7 +26,19 @@
 <div class="fb-like" data-href="http://www.facebook.com/HogeDriven" data-send="false" data-width="450" data-show-faces="true"></div>
 <div class="fb-follow" data-href="http://www.facebook.com/HogeDriven" data-show-faces="true" data-width="450"></div>
 <br>
+株式会社HOGE DRIVENは今日突然みんな辞めちゃったので、急遽採用活動をおこなってるほげ！<br>
+興味のある人は↑から「Hoge駆動」を<strong>「ﾌｫｹﾞｰ」</strong>してくれると嬉しいほげ！<br>
+<strong>「ﾎｹﾞね！」</strong>してくれても良いほげよ！<br>
+<br>
 <pre id="target"></pre>
 <script type="text/javascript" src="shared/js/hogedriven.js"></script>
+<script type="text/javascript">
+(function() {
+    setTimeout( function() {
+        document.body.innerHTML = document.body.innerHTML.replace(/フォロー/gi,'ﾌｫｹﾞｰ');
+        document.body.innerHTML = document.body.innerHTML.replace(/いいね/gi,'ﾎｹﾞ');
+    }, 3500);
+})();
+</script>
 </body>
 </html>
