iframe内は書き換えられないっぽい

--- a/aprilfools2013/doit.html
+++ b/aprilfools2013/doit.html
@@ -27,18 +27,10 @@
 <div class="fb-follow" data-href="http://www.facebook.com/HogeDriven" data-show-faces="true" data-width="450"></div>
 <br>
 株式会社HOGE DRIVENは今日突然みんな辞めちゃったので、急遽採用活動をおこなってるほげ！<br>
-興味のある人は↑から「Hoge駆動」を<strong>「ﾌｫｹﾞｰ」</strong>してくれると嬉しいほげ！<br>
-<strong>「ﾎｹﾞね！」</strong>してくれても良いほげよ！<br>
+興味のある人は↑から「Hoge駆動」を<strong>「ﾌｫｹﾞｰ」</strong>してほしいほげ！<br>
+<strong>「ﾎｹﾞね！」</strong>してくれるのも嬉しいほげよ！<br>
 <br>
 <pre id="target"></pre>
 <script type="text/javascript" src="shared/js/hogedriven.js"></script>
-<script type="text/javascript">
-(function() {
-    setTimeout( function() {
-        document.body.innerHTML = document.body.innerHTML.replace(/フォロー/gi,'ﾌｫｹﾞｰ');
-        document.body.innerHTML = document.body.innerHTML.replace(/いいね/gi,'ﾎｹﾞ');
-    }, 3500);
-})();
-</script>
 </body>
 </html>
