--- a/aprilfools2013/doit.html
+++ b/aprilfools2013/doit.html
@@ -16,6 +16,8 @@
 </head>
 <body>
 <div id="fb-root"></div>
+<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://hogedriven.net/aprilfools2013/" data-text="ほげ駆動が採用活動しているっぽいよ！要チェックや！" data-via="hogedriven" data-lang="ja">ツイート</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
@@ -28,8 +30,8 @@
 <br>
 <hr>
 株式会社HOGE DRIVENは今日突然みんな辞めちゃったので、急遽採用活動をおこなってるほげ！<br>
-興味のある人は↑から「Hoge駆動」を<strong>「ﾌｫｹﾞｰ」</strong>してほしいほげ！<br>
-<strong>「ﾎｹﾞね！」</strong>してくれるのも嬉しいほげよ！<br>
+興味のある人は↑から「Hoge駆動」を<strong>「ﾌｫｹﾞｰ」</strong><span style="color:#999;font-size:6px;">(フォローのこと)</span>してほしいほげ！<br>
+<strong>「ﾎｹﾞね！」</strong><span style="color:#999;font-size:6px;">(いいね！のこと)</span>してくれるのも嬉しいほげよ！<br>
 <br>
 <pre id="target"></pre>
 <script type="text/javascript" src="shared/js/hogedriven.js"></script>
