--- a/aprilfools2013/index.html
+++ b/aprilfools2013/index.html
@@ -1,17 +1,10 @@
 <!--
-＿      ＿                                              ＿＿＿                ＿
-|   |   |    |    ＿＿          ＿＿ _   ＿＿      |    ＿  ＼＿ ＿＿(＿)         ＿＿＿    ＿ ＿＿
-|   |＿|    |／  ＿   ＼  ／  ＿ ` |／  ＿  ＼  |   |   |    |   '＿＿|  \ \      /  /  ＿  ＼|   '＿  ＼
-|    ＿     |    (＿)     |    (＿|   |    ＿＿／  |   |＿|    |    |      |    |\  V   /    ＿＿／   |     |   |
-|＿ |  | ＿|＼＿＿＿／＼＿＿,  |＼＿＿＿|  |＿＿／  |＿|       |＿|  \＿/＼＿＿＿  |＿|     |＿|
-                              |＿＿＿／
-
-　 　 　　　＿＿＿＿＿
-　 　　 ／　⌒　　　⌒ ＼
-　　 ／　（ ●） 　（●） ＼
-　 ／::::::⌒（__人__）⌒::::: ＼
-　 |　　　 　　|r┬-|　　  　　　|
-　 ＼ 　 　   　 `ー'´ 　 　    ／
+ _   _                    ____       _
+| | | | ___   __ _  ___  |  _ \ _ __(_)_   _____ _ __
+| |_| |/ _ \ / _` |/ _ \ | | | | '__| \ \ / / _ \ '_ \
+|  _  | (_) | (_| |  __/ | |_| | |  | |\ V /  __/ | | |
+|_| |_|\___/ \__, |\___| |____/|_|  |_| \_/ \___|_| |_|
+             |___/
 -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html lang="ja">
@@ -31,7 +24,7 @@
 </head>
 <body id="pagetop">
 <div class="layout">
-<div class="cms-wrapper top-cms-wrapper">
+<div>
 <!-- main -->
 <div class="main index">
 <!-- header-container -->
@@ -54,147 +47,224 @@
 </div>
 <!--/nav-container -->
 <div class="top-main-copy-section" align="center">
-	<div id="hoge_hype_container" style="position:relative;overflow:hidden;width:600px;height:320px;">
-		<script type="text/javascript" charset="utf-8" src="../resources/js/hoge_hype_generated_script.js?38561"></script>
-	</div>
+    <div id="hoge_hype_container" style="position:relative;overflow:hidden;width:600px;height:320px;">
+        <script type="text/javascript" charset="utf-8"
+                src="../resources/js/hoge_hype_generated_script.js?38561"></script>
+    </div>
 </div>
 <div class="index-container">
-    <!-- body-contaienr -->
-    <div class="body-container">
-        <div class="latest-container">
-            <div class="product">
-                <a name="works"></a>
-                <h2>主な実績紹介</h2>
+<!-- body-contaienr -->
+<div class="body-container">
+<div class="latest-container">
+<div class="event">
+    <a name="works"></a>
 
-                <div class="product-list mod-product-list">
-                    <ul>
-                        <li class="bg-clr1">
-                            <div class="img">
-                                <img src="shared/img/steak.jpg" width="100" height="75">
-                            </div>
-                            <div class="txt">
-                                <div class="date">2012/03/30</div>
-                                <div class="title">
-                                    <a href="http://connpass.com/event/1704/">
-                                        ステーキ駆動 - なるほど！ザ・春の再演スペシャル！ あのステキな発表をもう一度 -
-                                    </a>
-                                </div>
-                                <div class="spec">会場：フリュー株式会社</div>
-                            </div>
-                        </li>
-                        <li class="bg-clr1">
-                            <div class="img">
-                                <img src="shared/img/yakiniku.jpg" width="100" height="75">
-                            </div>
-                            <div class="txt">
-                                <div class="date">2012/10/27</div>
-                                <div class="title">
-                                    <a href="http://atnd.org/events/31268">
-                                        やきに駆動 2.0 〜日本よ、これがHoge駆動だ〜
-                                    </a>
-                                </div>
-                                <div class="spec">会場：フリュー株式会社</div>
-                            </div>
-                        </li>
-                        <li class="bg-clr2">
-                            <div class="img">
-                                <img src="shared/img/shika.png" width="100" height="75">
-                            </div>
-                            <div class="txt">
-                                <div class="date">2012/04/29</div>
-                                <div class="title">
-                                    <a href="http://atnd.org/events/24587">
-                                        鹿駆動勉強会 〜こうなったら能楽堂でLTやるシカ！！〜
-                                    </a>
-                                </div>
-                                <div class="spec">会場：奈良県新公会堂 能楽ホール</div>
-                            </div>
-                        </li>
-                        <li class="bg-clr2">
-                            <div class="img">
-                                <img src="shared/img/nabe.jpg" width="100" height="75">
-                            </div>
-                            <div class="txt">
-                                <div class="date">2012/02/19</div>
-                                <div class="title">
-                                    <a href="http://atnd.org/events/24580">
-                                        鍋駆動 テスト冬の陣 〜テイスティング駆動モグモグさせろください〜
-                                    </a>
-                                </div>
-                                <div class="spec">会場：株式会社クロノス</div>
-                            </div>
-                        </li>
-                        <li class="bg-clr1">
-                            <div class="img">
-                                <img src="shared/img/fue.jpg" width="100" height="75">
-                            </div>
-                            <div class="txt">
-                                <div class="date">2011/12/23</div>
-                                <div class="title">
-                                    <a href="http://atnd.org/events/21046">
-                                        謎の忘年会改め「忘年会駆動年末発表しつくしセール 〜除夜のフエ聞きながら年越しラムネですね、分かります〜」
-                                    </a>
-                                </div>
-                                <div class="spec">会場：株式会社プラグラム</div>
-                            </div>
-                        </li>
-                        <li class="bg-clr2">
-                            <div class="img">
-                                <img src="shared/img/yakiniku.jpg" width="100" height="75">
-                            </div>
-                            <div class="txt">
-                                <div class="date">2011/11/13</div>
-                                <div class="title">
-                                    <a href="http://atnd.org/events/20138">
-                                        やきに駆動 秋のJava祭典スペシャル in 大阪〜こりん星
-                                    </a>
-                                </div>
-                                <div class="spec">会場：株式会社クロノス</div>
-                            </div>
-                        </li>
-                    </ul>
+    <h2>主な実績紹介</h2>
+
+    <div class="event-list">
+        <ul>
+            <li class="bg-clr1">
+                <div class="img">
+                    <img src="shared/img/steak.jpg" width="100" height="75">
                 </div>
-            </div>
-            <div class="news">
-                <a name="info"></a>
-                <h2>お知らせ</h2>
-
-                <div class="news-list mod-news-list">
-                    <ul>
-                        <li>
-                            <div class="date">2013/04/01</div>
-                            <div class="title">
-                                <img src="shared/img/new.png" width="32" height="11" />
-                                ステーキ駆動で「鉄板ネタ」と間違えて「鉄板」を持ち込んだ人が8人を越えました。
-                            </div>
-                        </li>
-                        <li>
-                            <div class="date">2012/04/31</div>
-                            <div class="title">
-                                鹿駆動における参加者から寄せられた「鹿は食っていないじゃないか」というコメントについて緊急記者会見を行いました。
-                            </div>
-                        </li>
-                  </ul>
+                <div class="txt">
+                    <div class="date">2012/03/30</div>
+                    <div class="title">
+                        <a href="http://connpass.com/event/1704/">
+                            ステーキ駆動 - なるほど！ザ・春の再演スペシャル！ あのステキな発表をもう一度 -
+                        </a>
+                    </div>
+                    <div class="spec">会場：フリュー株式会社</div>
                 </div>
+            </li>
+            <!--
+            　　　　　　　　　　　　　　ステーキ駆動だけどステーキは食べない
+            　　　∧∧
+            　　（　 ･ω･）
+            　 ＿|　⊃／(＿＿_
+            ／　└-(＿＿＿_／
+            ￣￣￣￣￣￣￣
+          　　　　　　　　　　　　　　　　俺はそういうことに幸せを感じるんだ
+            　 ＜⌒／ヽ-、_＿_
+            ／＜_/＿＿＿＿／
 
-                <a name="press"></a>
-                <h2>プレスリリース</h2>
-
-                <div class="news-list mod-news-list">
-                    <ul>
-                        <li>
-                            <div class="date">2012/09/28</div>
-                            <div class="title">
-                                <a href="http://jibun.atmarkit.co.jp/lcom01/special/shika/01.html">
-                                    世界遺産でIT勉強会を開催する方法（＠IT自分戦略研究所）
-                                </a>
-                            </div>
-                        </li>
-                    </ul>
+            (参考）ステーキ駆動懇親会会場： 九州料理 薩摩はやと http://r.gnavi.co.jp/c647603/menu5.html
+            -->
+            <li class="bg-clr1">
+                <div class="img">
+                    <img src="shared/img/yakiniku.jpg" width="100" height="75">
                 </div>
-            </div>
-        </div>
+                <div class="txt">
+                    <div class="date">2012/10/27</div>
+                    <div class="title">
+                        <a href="http://atnd.org/events/31268">
+                            やきに駆動 2.0 〜日本よ、これがHoge駆動だ〜
+                        </a>
+                    </div>
+                    <div class="spec">会場：フリュー株式会社</div>
+                </div>
+            </li>
+            <!--
+               　　　　　　　　必死でダイエットしたのに焼肉食べてリバウンド
+            　　　∧∧
+            　　（　 ･ω･）
+            　 ＿|　⊃／(＿＿_
+            ／　└-(＿＿＿_／
+            ￣￣￣￣￣￣￣
+          　　　　　　　　　　　　　　　　俺はそういうことに幸せを感じるんだ
+            　 ＜⌒／ヽ-、_＿_
+            ／＜_/＿＿＿＿／
+
+            (参考）【裏・やきに駆動】やきに駆動ダイエットレース http://atnd.org/events/31950
+            -->
+            <li class="bg-clr2">
+                <div class="img">
+                    <img src="shared/img/shika.png" width="100" height="75">
+                </div>
+                <div class="txt">
+                    <div class="date">2012/04/29</div>
+                    <div class="title">
+                        <a href="http://atnd.org/events/24587">
+                            鹿駆動勉強会 〜こうなったら能楽堂でLTやるシカ！！〜
+                        </a>
+                    </div>
+                    <div class="spec">会場：奈良県新公会堂 能楽ホール</div>
+                </div>
+            </li>
+            <!--
+                             外出すると大雨が降るのでイベント当日は外出禁止を言い渡される
+            　　　∧∧
+            　　（　 ･ω･）
+            　 ＿|　⊃／(＿＿_
+            ／　└-(＿＿＿_／
+            ￣￣￣￣￣￣￣
+          　　　　　　　　　　　　　　              　　俺はそういうことに幸せを感じるんだ
+            　 ＜⌒／ヽ-、_＿_
+            ／＜_/＿＿＿＿／
+
+            (参考）@daiksy
+            -->
+            <li class="bg-clr2">
+                <div class="img">
+                    <img src="shared/img/nabe.jpg" width="100" height="75">
+                </div>
+                <div class="txt">
+                    <div class="date">2012/02/19</div>
+                    <div class="title">
+                        <a href="http://atnd.org/events/24580">
+                            鍋駆動 テスト冬の陣 〜テイスティング駆動モグモグさせろください〜
+                        </a>
+                    </div>
+                    <div class="spec">会場：株式会社クロノス</div>
+                </div>
+            </li>
+            <!--
+               　　    　会場の鍵を持っている人がイベント開始時刻に起床する
+            　　　∧∧
+            　　（　 ･ω･）
+            　 ＿|　⊃／(＿＿_
+            ／　└-(＿＿＿_／
+            ￣￣￣￣￣￣￣
+          　　　　　　　　　　　　　　　　俺はそういうことに幸せを感じるんだ
+            　 ＜⌒／ヽ-、_＿_
+            ／＜_/＿＿＿＿／
+
+            (参考）@kiy0taka
+            -->
+            <li class="bg-clr1">
+                <div class="img">
+                    <img src="shared/img/fue.jpg" width="100" height="75">
+                </div>
+                <div class="txt">
+                    <div class="date">2011/12/23</div>
+                    <div class="title">
+                        <a href="http://atnd.org/events/21046">
+                            謎の忘年会改め「忘年会駆動年末発表しつくしセール 〜除夜のフエ聞きながら年越しラムネですね、分かります〜」
+                        </a>
+                    </div>
+                    <div class="spec">会場：株式会社プラグラム</div>
+                </div>
+            </li>
+            <!--
+               　　         　フエラムネやお菓子を食べ過ぎて懇親会前にお腹いっぱい
+            　　　∧∧
+            　　（　 ･ω･）
+            　 ＿|　⊃／(＿＿_
+            ／　└-(＿＿＿_／
+            ￣￣￣￣￣￣￣
+          　　　　　　　　　　　　　　       　　俺はそういうことに幸せを感じるんだ
+            　 ＜⌒／ヽ-、_＿_
+            ／＜_/＿＿＿＿／
+            -->
+            <li class="bg-clr2">
+                <div class="img">
+                    <img src="shared/img/yakiniku.jpg" width="100" height="75">
+                </div>
+                <div class="txt">
+                    <div class="date">2011/11/13</div>
+                    <div class="title">
+                        <a href="http://atnd.org/events/20138">
+                            やきに駆動 秋のJava祭典スペシャル in 大阪〜こりん星
+                        </a>
+                    </div>
+                    <div class="spec">会場：株式会社クロノス</div>
+                </div>
+            </li>
+            <!--
+               　　         　思い出の地「焼肉小倉優子」を訪れるもすでに閉店
+            　　　∧∧
+            　　（　 ･ω･）
+            　 ＿|　⊃／(＿＿_
+            ／　└-(＿＿＿_／
+            ￣￣￣￣￣￣￣
+          　　　　　　　　　　　　　　    　俺はそういうことに幸せを感じるんだ
+            　 ＜⌒／ヽ-、_＿_
+            ／＜_/＿＿＿＿／
+            -->
+        </ul>
     </div>
+</div>
+<div class="news">
+    <a name="info"></a>
+
+    <h2>お知らせ</h2>
+
+    <div class="news-list">
+        <ul>
+            <li>
+                <div class="date">2013/04/01  <img src="shared/img/new.png" width="28" height="11"/></div>
+                <div class="title">
+                    ステーキ駆動で「鉄板ネタ」と間違えて「鉄板」を持ち込んだ人が8人を越えました。
+                </div>
+            </li>
+            <li>
+                <div class="date">2012/04/31</div>
+                <div class="title">
+                    鹿駆動における参加者から寄せられた「鹿は食っていないじゃないか」というコメントについて緊急記者会見を行いました。
+                </div>
+            </li>
+        </ul>
+    </div>
+
+    <a name="press"></a>
+
+    <h2>プレスリリース</h2>
+
+    <div class="news-list mod-news-list">
+        <ul>
+            <li>
+                <div class="date">2012/09/28</div>
+                <div class="title">
+                    <a href="http://jibun.atmarkit.co.jp/lcom01/special/shika/01.html">
+                        世界遺産でIT勉強会を開催する方法（＠IT自分戦略研究所）
+                    </a>
+                </div>
+            </li>
+        </ul>
+    </div>
+</div>
+</div>
+</div>
 </div>
 <!-- footer-contaienr -->
 <div class="footer-container">
