語尾を ほげ に変更

--- a/aprilfools2013/doit.html
+++ b/aprilfools2013/doit.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <div id="fb-root"></div>
-<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://hogedriven.net/aprilfools2013/" data-text="ほげ駆動が採用活動しているっぽいよ！要チェックや！" data-via="hogedriven" data-lang="ja">ツイート</a>
+<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://hogedriven.net/aprilfools2013/" data-text="ほげ駆動が採用活動しているっぽいよ！要チェックほげ！" data-via="hogedriven" data-lang="ja">ツイート</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
