--- a/log.html
+++ b/log.html
@@ -14,6 +14,9 @@
       <li>2012-07-15 <a href="http://atnd.org/events/30264">ClassLoader駆動 15の昼</a></li>
       <li>2012-10-27 <a href="http://atnd.org/events/31268">やきに駆動 2.0 〜日本よ、これがHoge駆動だ〜</a></li>
       <li>2012-12-29 <a href="http://connpass.com/event/1463/">忘年会駆動 2012</a></li>
+      <li>2013-03-30 <a href="http://connpass.com/event/1704/">ステーキ駆動 - なるほど！ザ・春の再演スペシャル！ あのステキな発表をもう一度 -</a></li>
+      <li>2013-07-27 <a href="http://connpass.com/event/2644/">夏のhoge駆動☆カレーの王子さまリターンズ 〜たんごさんを囲みながら資料の盆踊りスペシャル〜</a></li>
+      <li>2013-12-28 忘年会駆動</li>
     </ul>
   </body>
 </html>
