--- a/log.html
+++ b/log.html
@@ -18,5 +18,6 @@
       <li>2013-07-27 <a href="http://connpass.com/event/2644/">夏のhoge駆動☆カレーの王子さまリターンズ 〜たんごさんを囲みながら資料の盆踊りスペシャル〜</a></li>
       <li>2013-12-28 忘年会駆動</li>
     </ul>
+    <h1>スライド一覧は<a href="contents/list.html">こちら</a></h1>
   </body>
 </html>
