--- a/contents/list.html
+++ b/contents/list.html
@@ -3,64 +3,64 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width">
-
 <link rel="stylesheet" type="text/css" href="../resources/css/34gs.css" />
 <link rel="stylesheet" type="text/css" href="../resources/css/34gs-queries.css" />
-
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-<script type="text/javascript" src="../resources/js/knockout-2.2.0.js"></script>
-
-
+<script type="text/javascript" src="../resources/js/knockout-3.2.0.js"></script>
 </head>
 <body>
 	<div class="container">
-		<div class="row" data-bind="foreach: slides">
-			<div class="col_5" id="test" >
-				<ul>
-					<li><a data-bind="attr: { href: Url}">
-            <div>
-              <div><img data-bind="attr: {src: ThumbnailUrl}"></div>
-              <div data-bind="text: Title"></div>
-            </div>
-          </a></li>
-					<li data-bind="text: Username"></li>
-				</ul>
-			</div>
+	<div class="row" data-bind="foreach: slides">
+	<div class="col_5" id="test" >
+	<ul>
+	<li>
+		<a data-bind="attr: { href: Url}">
+		<div>
+			<div><img data-bind="attr: {src: ThumbnailUrl}"></div>
+			<div data-bind="text: Title"></div>
 		</div>
-	</div>
+		</a>
+	</li>
+	<li data-bind="text: Username"></li>
+	</ul>
+</div>
+</div>
+</div>
   
-<script type="text/javascript">
+<script>
   
-var target = "http://shielded-plateau-9573.herokuapp.com/api/search/hogedriven?callback=?";
-
-function SlideshowModel() {
-	var self = this;
-	
-  self.slides = ko.observableArray([]);
-}
-
-var slideshowModel = new SlideshowModel();
-
-ko.applyBindings(slideshowModel);
-
-$(document).ready(function(){
-//	slideshowModel.avairableSlideshows;
-	$.getJSON(target,
-		{"query": "hogedriven", "ts": new Date().getTime()}, 
-		function(data){
-			jsondata = data["slides"];	
-			for ( var i = 0; i < jsondata.length; i++ ) {
-				slideshowModel.slides.push(
-					{Title: jsondata[i].Title, 
-					 Username:	jsondata[i].Username,
-					 Url:	jsondata[i].URL,
-					 ThumbnailUrl:	jsondata[i].ThumbnailURL});
-			}	
-	});
-
-});	
-
+$(function(){
+	var target = "http://shielded-plateau-9573.herokuapp.com/api/search/hogedriven?callback=?";
+	function Converter(slides) {
+		var self = this;
+		self.slides = slides;
+		self.fromJson = function(data){
+			self.slides(ko.utils.arrayMap(data["slides"], function(item){
+				return {
+					Title: item.Title, 
+					Username: item.Username,
+					Url: item.URL,
+					ThumbnailUrl: item.ThumbnailURL
+				};
+			}));
+		};
+	}
+	function SlideshowModel() {
+		var self = this;
+		self.url = ko.observable(target);
+		self.slides = ko.observableArray([]);
+		self.load = ko.computed(function(){
+			$.getJSON(
+				ko.unwrap(self.url),
+				{ "query" : "hogedriven", "ts": new Date().getTime() }, 
+				(new Converter(self.slides)).fromJson
+			);
+		});
+	};
+	//	slideshowModel.avairableSlideshows;
+	var slideshowModel = new SlideshowModel();
+	ko.applyBindings(slideshowModel);
+});
 </script>
-
 </body>
 </html>
