忘年会駆動2014へのリンクを追加したった╭( ・ㅂ・)و ̑̑ ｸﾞｯ !

--- a/log.html
+++ b/log.html
@@ -17,6 +17,7 @@
       <li>2013-03-30 <a href="http://connpass.com/event/1704/">ステーキ駆動 - なるほど！ザ・春の再演スペシャル！ あのステキな発表をもう一度 -</a></li>
       <li>2013-07-27 <a href="http://connpass.com/event/2644/">夏のhoge駆動☆カレーの王子さまリターンズ 〜たんごさんを囲みながら資料の盆踊りスペシャル〜</a></li>
       <li>2013-12-28 忘年会駆動</li>
+      <li>2014-12-28 <a href="https://www.facebook.com/events/845692442137739/">忘年会駆動 2014</a></li>
     </ul>
     <h1>スライド一覧は<a href="contents/list.html">こちら</a></h1>
   </body>
